Visual Leak Detector (VLD) Version 2.5.1


  Change Log / Release Notes

2.5.2 (19 August 2020)
----------------------------
  Enhancements:
  + VS2017/2019 support added.

  Bug Fixes:
    + notify report writer after closing report file 
    + %zu is a valid format specifier only from vs2015 onwards

2.5.1 (30 January 2017)
----------------------------
  Enhancements:
  + PDB added to installer.

  Bugs Fixed:
  + Fix ntdll loader patch for Windows 10 (1607) Anniversary Update causing crashes (thanks to ioannis-e).
  + Vld dll loading order fixed with MFC.
  + Supressible msgboxes in setup with cmdline /silent /suppressmsgboxes.

2.5 (09 January 2016)
----------------------------
  Enhancements:
  + VS2015 support added.
  + Windows 10 support added.
  + Support MFC 12 MBCS (thanks to mnissl).
  + VLD config through env. vars (thanks to akaStiX).
  + Support detection DllMain allocations (thanks to ioannis-e).
  + Add option to skip reporting crt startup allocations as memory leaks (thanks to ioannis-e).
  + Improve the vld.ini searching from additional locations (thanks to ioannis-e).
  + Changed implementation of FastCallStack::getStackTrace for 32-bit code.

  Bugs Fixed:
  + Fix #9519, #9859, #10544, use LoaderLock to serialize any calls which load additional libraries or require access to the Loader Lock (thanks to ioannis-e).
  + Fix #6359, #10553, fix crashes and failure to register COM dlls where Visual Leak Detector is unloaded before IMalloc interface is released (thanks to ioannis-e).
  + Fix #10548, vld.ini search path (thanks to ioannis-e).
  + Fix #10587, Visual Leak Detector reporting strange leaks in CRT module of VC++ (thanks to ioannis-e).
  + Fix #10588, false positives from CRT in VS2013 with /MTd (thanks to ioannis-e).
  + Deadlock fixed with StackWalkMethod=safe.

2.4RC2 (07 April 2014)
----------------------------
  Enhancements:
  + VLD will display last internal frame.
  + Installer also add path for static library.

  Bugs Fixed: