@@ -4,6 +4,11 @@
 #include <cerrno>
 #include <cstdio>
 #include <windows.h>
+
+#include <winsock2.h>
+#include <ws2tcpip.h>
+#pragma comment(lib, "ws2_32.lib")
+
 #if _WIN32_WINNT < 0x0600 // Windows XP or earlier, no GetProcessIdOfThread()
 #include <winternl.h>
 #endif
