@@ -1,4 +1,4 @@
-Visual Leak Detector (VLD) Version 2.5.1
+Visual Leak Detector (VLD) Version 2.5.2
 
 
   Change Log / Release Notes
@@ -7,10 +7,14 @@ Visual Leak Detector (VLD) Version 2.5.1
 ----------------------------
   Enhancements:
   + VS2017/2019 support added.
+  + the log file is now opened in shared read mode which allows in-progress peeks of the file content
 
   Bug Fixes:
     + notify report writer after closing report file 
-    + %zu is a valid format specifier only from vs2015 onwards
+    + %zu is a valid format specifier only from vs2015 onwards 
+    + fix against a deadlock during logfile close
+    + fix for a use after delete of logfile FILE pointer
+    + fix: obtain ldrlock before dumping leaks, to avoid deadlocks
 
 2.5.1 (30 January 2017)
 ----------------------------
